--- a/style.css
+++ b/style.css
@@ -1,33 +1,125 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Arial', sans-serif;
+}
+
+body {
+    background-color: #07060a;
+    color: #c0d1d8;
+    padding: 20px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 42px;
+    margin-bottom: 20px;
+    color: #c0d1d8;
+}
+
+input[type="text"], input[type="date"], select {
+    cursor: text;
+}
+
+a {
+    cursor: pointer;
+}
+
+input[type="text"], input[type="date"], select, button {
+    font-size: 16px;
+    padding: 12px;
+    margin: 12px 0;
+    border-radius: 8px;
+    border: 0px solid;
+    width: 100%;
+    max-width: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #21242c;
+    color: #c0d1d8;
+    transition: all 0.3s ease-in-out;
+}
+
+input[type="text"]:focus, input[type="date"]:focus, select:focus, button:focus {
+    outline: none;
+    box-shadow: 0 0 5px #416372;
+}
+
+button {
+    background-color: #171928;
+    color: #c0d1d8;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #10121e;
+}
+
+#data-container {
+    margin-top: 30px;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
     margin: 20px 0;
-    font-size: 18px;
-    text-align: left;
-}
-
-th, td {
-    padding: 12px;
-    border-bottom: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 10px #171928;
+    background-color: #212330;
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: #171928;
+    color: #c0d1d8;
+    padding: 12px;
+    text-align: left;
+    font-weight: bold;
+    text-align: center;
 }
 
-tr:hover {
-    background-color: #f5f5f5;
+td {
+    padding: 12px;
+    border-top: 4px solid #07060a;
+    color: #c0d1d8;
 }
 
-a {
-    color: #3498db;
-    text-decoration: none;
+#tableauGeneral tr:hover {
+    background-color: #2b2d3b;
 }
 
-a:hover {
-    text-decoration: underline;
+#tableauGeneral td {
+    cursor: pointer;
+}
+
+table td ul {
+    list-style-type: none;
+    font-size: 15px;
 }
 
 ul {
     list-style-type: none;
+}
+
+a {
+    color: #90bacc;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    cursor: pointer;
+}
+
+a:hover {
+    color: #495b6e;
+}
+
+p {
+    padding-bottom: 10px;
 }
