--- a/style.css
+++ b/style.css
@@ -52,11 +52,12 @@ button {
     color: #c0d1d8;
     border: none;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 button:hover {
     background-color: #10121e;
+    transform: scale(1.10);
 }
 
 #data-container {
@@ -100,6 +101,15 @@ td {
     cursor: pointer;
 }
 
+#tableauGeneral tr td:nth-child(2), #tableauGeneral tr td:nth-child(3) {
+    text-align: center;
+}
+
+#tableauDetail tr td:nth-child(2) {
+    text-align: center;
+    font-size: 20px;
+}
+
 table td ul {
     list-style-type: none;
     font-size: 15px;
@@ -122,4 +132,30 @@ a:hover {
 
 p {
     padding-bottom: 10px;
+}
+#pagination-container {
+    text-align: center;
+
+}
+#pagination-container button {
+    font-size: 12px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
+    border: none;
+    background-color: #212330;
+    color: #c0d1d8;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    display: inline-block;
+    max-width: 25px;
+}
+
+#pagination-container button:hover {
+    background-color: #171928;
+    transform: scale(2);
 }
