--- a/style.css
+++ b/style.css
@@ -110,6 +110,10 @@ td {
     font-size: 20px;
 }
 
+#tableauGeneral tr td:nth-child(1) {
+    font-size: 20px;
+}
+
 table td ul {
     list-style-type: none;
     font-size: 15px;
